--- a/demo-service/templates/deployment.yaml
+++ b/demo-service/templates/deployment.yaml
@@ -16,11 +16,67 @@ spec:
         app.kubernetes.io/name: {{ include "demo-service.name" . }}
         app.kubernetes.io/instance: {{ .Release.Name }}
     spec:
+      serviceAccountName: vault-auth
     {{- with .Values.imagePullSecrets }}
       imagePullSecrets:
         {{- toYaml . | nindent 8 }}
     {{- end }}
+      volumes:
+      - name: vault-token
+        emptyDir:
+          medium: Memory
+      - name: secret-stuff
+        emptyDir: {}
+      - name: config
+        configMap:
+          name: example-vault-agent-config
+          items:
+            - key: vault-agent-config.hcl
+              path: vault-agent-config.hcl
+            - key: consul-template-config.hcl
+              path: consul-template-config.hcl
+      initContainers:
+        # Vault container
+        - name: vault-agent-auth
+          image: vault
+          volumeMounts:
+            - name: config
+              mountPath: /etc/vault
+            - name: vault-token
+              mountPath: /home/vault
+          env:
+            - name: VAULT_ADDR
+              value: http://docker.for.mac.host.internal:8200
+          # Run the Vault agent
+          args:
+            [
+              "agent",
+              "-config=/etc/vault/vault-agent-config.hcl",
+              "-log-level=debug",
+            ]
       containers:
+        # Consul Template container
+        - name: consul-template
+          image: hashicorp/consul-template:alpine
+          imagePullPolicy: Always
+          volumeMounts:
+            - name: vault-token
+              mountPath: /home/vault
+            - name: config
+              mountPath: /etc/consul-template
+            - name: secret-stuff
+              mountPath: /etc/secrets
+          env:
+            - name: HOME
+              value: /home/vault
+            - name: VAULT_ADDR
+              value: http://docker.for.mac.host.internal:8200
+          # Consul-Template looks in $HOME/.vault-token, $VAULT_TOKEN, or -vault-token (via CLI)
+          args:
+            [
+              "-config=/etc/consul-template/consul-template-config.hcl",
+            ]
+
         - name: {{ .Chart.Name }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
@@ -38,6 +94,11 @@ spec:
               port: http
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
+          volumeMounts:
+            - name: vault-token
+              mountPath: /home/vault
+            - name: secret-stuff
+              mountPath: /usr/share/html
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
