deploy with circleci

--- a/demo-service/templates/deployment.yaml
+++ b/demo-service/templates/deployment.yaml
@@ -17,10 +17,8 @@ spec:
         app.kubernetes.io/instance: {{ .Release.Name }}
     spec:
       serviceAccountName: vault-auth
-    {{- with .Values.imagePullSecrets }}
       imagePullSecrets:
-        {{- toYaml . | nindent 8 }}
-    {{- end }}
+        - name: regcred
       volumes:
       - name: vault-token
         emptyDir:
